@@ -5,6 +5,7 @@ Isotope eCommerce Changelog
 Version 0.2.beta2
 ------------------------------
 - Added: New "link target" field and help wizard to media manager
+- Added: IsotopeGallery now supports link targets and "rel" attributes
 - Fixed: Variant price should not show "From" when all variants have the same price
 - Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
 
